--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard</title>
+  <title>Responsive Tableau Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -26,23 +26,25 @@
 
     .dashboard-container {
       width: 100%;
-      max-width: 100vw;
+      max-width: 1200px;
       height: auto;
-      overflow: auto;
+      overflow-x: auto;
+      overflow-y: auto;
       background: white;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
       border-radius: 12px;
       padding: 10px;
+      box-sizing: border-box;
     }
 
     .tableauPlaceholder {
       width: 100%;
       min-width: 100%;
-      height: auto;
     }
 
     .tableauViz {
       width: 100%;
+      min-width: 100%;
       height: 75vh;
       min-height: 500px;
       border: none;
@@ -60,6 +62,11 @@
         font-size: 1.4em;
       }
 
+      .dashboard-container {
+        padding: 5px;
+        border-radius: 8px;
+      }
+
       .tableauViz {
         height: 80vh;
         min-height: 400px;
@@ -70,11 +77,10 @@
 <body>
 
   <header>
-    <h1>Dashboard</h1>
+    <h1>My Tableau Dashboard</h1>
   </header>
 
   <div class="dashboard-container">
-    <!-- Tableau Embed Code -->
     <div class='tableauPlaceholder' id='viz1748634222924' style='position: relative;'>
       <noscript>
         <a href='#'>
