--- a/index.html
+++ b/index.html
@@ -37,19 +37,6 @@
       box-sizing: border-box;
     }
 
-    .tableauPlaceholder {
-      width: 100%;
-      min-width: 100%;
-    }
-
-    .tableauViz {
-      width: 100%;
-      min-width: 100%;
-      height: 75vh;
-      min-height: 500px;
-      border: none;
-    }
-
     footer {
       margin: 30px 0;
       color: #666;
@@ -66,11 +53,6 @@
         padding: 5px;
         border-radius: 8px;
       }
-
-      .tableauViz {
-        height: 80vh;
-        min-height: 400px;
-      }
     }
   </style>
 </head>
@@ -81,33 +63,47 @@
   </header>
 
   <div class="dashboard-container">
-    <div class='tableauPlaceholder' id='viz1748634222924' style='position: relative;'>
+    <div class='tableauPlaceholder' id='viz1749243088862' style='position: relative'>
       <noscript>
         <a href='#'>
-          <img alt='Dashboard' src='https://public.tableau.com/static/images/sa/sasi_17486339483790/Dashboard1/1_rss.png' style='border: none' />
+          <img alt=' ' src='https://public.tableau.com/static/images/Ex/Expensetracking/Dashboard1/1_rss.png' style='border: none' />
         </a>
       </noscript>
-      <object class='tableauViz'>
+      <object class='tableauViz' style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
         <param name='embed_code_version' value='3' />
         <param name='site_root' value='' />
-        <param name='name' value='sasi_17486339483790/Dashboard1' />
+        <param name='name' value='Expensetracking/Dashboard1' />
         <param name='tabs' value='yes' />
         <param name='toolbar' value='yes' />
-        <param name='static_image' value='https://public.tableau.com/static/images/sa/sasi_17486339483790/Dashboard1/1.png' />
+        <param name='static_image' value='https://public.tableau.com/static/images/Ex/Expensetracking/Dashboard1/1.png' />
         <param name='animate_transition' value='yes' />
         <param name='display_static_image' value='yes' />
         <param name='display_spinner' value='yes' />
         <param name='display_overlay' value='yes' />
         <param name='display_count' value='yes' />
         <param name='language' value='en-GB' />
+        <param name='filter' value='publish=yes' />
       </object>
     </div>
     <script type='text/javascript'>
-      var divElement = document.getElementById('viz1748634222924');
+      var divElement = document.getElementById('viz1749243088862');
       var vizElement = divElement.getElementsByTagName('object')[0];
-      vizElement.style.width = "100%";
-      vizElement.style.height = "75vh";
+      if (divElement.offsetWidth > 800) {
+        vizElement.style.minWidth = '1400px';
+        vizElement.style.maxWidth = '100%';
+        vizElement.style.minHeight = '1850px';
+        vizElement.style.maxHeight = (divElement.offsetWidth * 0.75) + 'px';
+      } else if (divElement.offsetWidth > 500) {
+        vizElement.style.minWidth = '1400px';
+        vizElement.style.maxWidth = '100%';
+        vizElement.style.minHeight = '1850px';
+        vizElement.style.maxHeight = (divElement.offsetWidth * 0.75) + 'px';
+      } else {
+        vizElement.style.width = '100%';
+        vizElement.style.minHeight = '2650px';
+        vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px';
+      }
       var scriptElement = document.createElement('script');
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
       vizElement.parentNode.insertBefore(scriptElement, vizElement);
